--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "functions": {
-    "api.py": {
+    "api/index.py": {
       "runtime": "python3.9"
     }
   },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api.py"
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "dest": "/$1"
     }
   ]
 }
