--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,6 @@
       "runtime": "python3.9"
     }
   },
-  "outputDirectory": "public"
+  "buildCommand": "echo 'No build needed'",
+  "outputDirectory": "."
 }
