--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
   "functions": {
     "api/index.py": {
-      "runtime": "python3.9"
+      "runtime": "python3.9@3.9.18"
     }
-  },
-  "buildCommand": "echo 'No build needed'",
-  "outputDirectory": "."
+  }
 }
